<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context=".controller.activity.help.HelpActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/page_counter"
            android:text="@string/second_help_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:textColor="@color/colorLimeYellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <Button
            android:id="@+id/back_button_click"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/forth_button_click"
            android:background="@drawable/backward_button"
            android:onClick="backButtonClick"/>

        <Button
            android:id="@+id/forth_button_click"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/forward_botton"
            android:onClick="forthButtonClick"/>

        <TextView
            android:id="@+id/help_title"
            android:text="@string/game_rules_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forth_button_click"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:textSize="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorLimeYellow"
            />

        <TextView
            android:text="@string/game_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_title"
            android:textSize="30sp"
            android:textColor="@color/colorLightGreen"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </RelativeLayout>

</ScrollView>